# Implement-Infinite-Alphabet-Automata-Too

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check.txt  include global hpp bool.txt  main.cpp
examples/: contain_11_or_101_nfa.txt  email_validation _dfa.txt  end-with-1.txt  ending_with_ab_nfa.txt  mobile_no_dfa.txt  ra_exmple1.txt
header/: global.hpp
src/: entry_point.cpp  nfa_dfa_checking.cpp  put_data.cpp  register_automata.cpp  show_data.cpp
